--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
+    "pug": "^3.0.3",
     "validator": "^13.12.0"
   },
   "devDependencies": {
